--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Wait for PostgreSQL to be ready
         run: |
-          timeout 60s bash -c '
+          timeout 120s bash -c '
             until pg_isready -h localhost -p 5432 -U testuser; do
               echo "Waiting for PostgreSQL..."
               sleep 2
@@ -155,6 +155,17 @@ jobs:
           go mod download
           go mod tidy
 
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          timeout 120s bash -c '
+            until pg_isready -h localhost -p 5432 -U testuser; do
+              echo "Waiting for PostgreSQL..."
+              sleep 2
+            done
+          '
+        env:
+          PGPASSWORD: testpass # pragma: allowlist secret
+
       - name: Run comprehensive E2E tests
         run: |
           chmod +x scripts/run-e2e-tests.sh
@@ -211,6 +222,17 @@ jobs:
         run: |
           go mod download
           go mod tidy
+
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          timeout 120s bash -c '
+            until pg_isready -h localhost -p 5432 -U testuser; do
+              echo "Waiting for PostgreSQL..."
+              sleep 2
+            done
+          '
+        env:
+          PGPASSWORD: testpass # pragma: allowlist secret
 
       - name: Run performance tests
         run: |
