⬆️ (ci.yml, e2e-tests.yml): upgrade postgres version to 17.5-alpine
This commit upgrades the PostgreSQL version used in CI and E2E tests from 15 to 17.5-alpine.
It also removes older PostgreSQL versions from the E2E test matrix to streamline testing.

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -27,8 +27,8 @@ jobs:
 
     strategy:
       matrix:
-        postgres_version: ["12", "13", "14", "15"]
-        go_version: ["1.21", "1.22"]
+        postgres_version: ["17.5"]
+        go_version: ["1.22"]
 
     services:
       postgres:
